[gd_scene load_steps=2 format=3 uid="uid://d0sbgbrbr5er"]

[ext_resource type="Script" uid="uid://db0q4htsjmtk4" path="res://ui/components/create_file_ui.gd" id="1_8vdu0"]

[node name="CreateFileUI" type="MarginContainer"]
custom_minimum_size = Vector2(0, 84)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.5
offset_top = -42.0
offset_right = 259.5
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_8vdu0")

[node name="BtnCreate" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CREATE NEW FILE"

[node name="BtnCancel" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "   X   "

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_right = 98

[node name="LineEdit" type="LineEdit" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "file name"
metadata/_edit_use_anchors_ = true

[node name="BtnConfirm" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 48
text = "  +  "

[connection signal="pressed" from="BtnCreate" to="." method="_on_btn_create_pressed"]
[connection signal="pressed" from="BtnCancel" to="." method="_on_btn_cancel_pressed"]
[connection signal="text_submitted" from="MarginContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="BtnConfirm" to="." method="_on_btn_confirm_pressed"]
